...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Edit Flight'),
      ),
      body: _isLoading
          ? const Center(child: CircularProgressIndicator())
          : FlightFormWidget(
              initialFlight: widget.flight,
              sites: _sites,
...
